# DonkeyWork-MarkdownEditor

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  PROGRESS-COMPACT.md  PROGRESS.md  README.md  TAURI_IMPLEMENTATION_PLAN.md  docker-compose.yml  index.html  mvp.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
.github/workflows/: pr-build.yml  publish.yml  release-desktop.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/common/: AutosaveIndicator.tsx  ThemeToggle.tsx
src/components/dialogs/: ImageDialog.tsx  LinkDialog.tsx  MermaidDialog.tsx  NewFileDialog.tsx
src/components/editor/: CodeBlockWithCopy.tsx  EditorView.tsx  MermaidDiagram.tsx  PreviewEditor.tsx  RawEditor.tsx  TableWithControls.tsx  preview-editor.css
src/components/layout/: AppLayout.tsx  SplitView.tsx  TabBar.tsx  Toolbar.tsx  ViewModeToggle.tsx
src/components/ui/: dialog.tsx  tabs.tsx
src/components/welcome/: FileDropzone.tsx  RecentFiles.tsx  WelcomeScreen.tsx
src/hooks/: useAutosave.ts  useFileOperations.ts  useKeyboardShortcuts.ts  useMediaQuery.ts
src/lib/: constants.ts
src/lib/db/: fileStore.ts  index.ts
src/lib/markdown/: mermaidExtension.ts  parser.ts  serializer.ts
src/lib/pdf/: exporter.ts
src/lib/storage/: provider.ts  types.ts
src/store/: index.ts  useEditorStore.ts  useFileStore.ts  useThemeStore.ts
src/types/: editor.ts  file.ts  index.ts  tiptap.d.ts
(+2 files in other folders)
